# hs-cmake

./: ChangeLog.md  README.md  hs-cmake.cabal  package.yaml  stack.yaml
app/: Main.hs
src/: Lib.hs  ParserT.hs
src/CMake/: AST.hs  Commands.hs  Cond.hs  Error.hs  InterpPrelude.hs  Interpreter.hs  List.hs
src/CMake/AST/: Defs.hs  Parser.hs
src/CMake/Commands/: Break.hs  CMakePolicy.hs  Continue.hs  File.hs  Include.hs  List.hs  Math.hs  Return.hs  Set.hs  String.hs  Unset.hs
src/CMake/Cond/: Defs.hs  Eval.hs  Parser.hs
src/CMake/Interpreter/: ArgsParse.hs  Arguments.hs  Base.hs  State.hs
src/CMakeHs/Internal/: Functor.hs  Monad.hs  Numeric.hs
support/: CmSys.cabal  CmSys.hs
support/CmSys/: HardLink.hs  SymLink.hs
test/: Spec.hs
